feat: Rebrand to Quadro de Acesso, add multi-select filters, and DB scripts

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "PMMG Concursos",
-    "short_name": "PMMG",
+    "name": "QUADRO DE ACESSO",
+    "short_name": "Q. ACESSO",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#101622",
